# trin

./: .clippy.toml  .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  contributor_guidelines.md  pyproject.toml  rustfmt.toml
crates/e2store/: Cargo.toml  README.md
crates/e2store/src/: e2hs.rs  e2ss.rs  entry_types.rs  era.rs  era1.rs  lib.rs  types.rs  utils.rs
crates/ethereum-rpc-client/: Cargo.toml  README.md
crates/ethereum-rpc-client/src/: constants.rs  execution.rs  http_client.rs  lib.rs
crates/ethportal-api/: Cargo.toml  README.md  build.rs
crates/ethportal-api/src/: beacon.rs  discv5.rs  eth.rs  history.rs  legacy_history.rs  lib.rs  state.rs  version.rs  web3.rs
crates/evm/: Cargo.toml  README.md
crates/evm/src/: async_db.rs  lib.rs  spec_id.rs  tx_env_modifier.rs
devp2p/: Cargo.toml  README.md  boot.sh  ipc_calls.py
devp2p/src/: cli.rs  dummy_protocol.rs  lib.rs  main.rs
e2store/: Cargo.toml  README.md
e2store/src/: e2s.rs  era.rs  era1.rs  era2.rs  lib.rs  types.rs  utils.rs
e2store/src/e2store/: memory.rs  mod.rs  stream.rs  types.rs
ethportal-api/: Cargo.toml  README.md  build.rs
ethportal-api/src/: beacon.rs  discv5.rs  endpoints.rs  eth.rs  history.rs  lib.rs  network.rs  service.rs  state.rs  version.rs  web3.rs
ethportal-api/src/dashboard/: collected-metrics-dashboard.json.template  grafana.rs  mod.rs
ethportal-api/src/test_utils/: constants.rs  mod.rs
ethportal-api/src/trin_types/: bootnodes.rs  bytes.rs  cli.rs  content_key.rs  content_value.rs  enr.rs  mod.rs  node_id.rs  provider.rs  query_trace.rs
ethportal-api/src/types/: accumulator.rs  beacon.rs  block_body.rs  block_header.rs  bootnodes.rs  bytes.rs  cli.rs  content_item.rs  content_key.rs  content_value.rs  discv5.rs  distance.rs  enr.rs  history.rs  log.rs  mod.rs  network.rs  node_id.rs  params.rs  portal.rs  portal_wire.rs  provider.rs  query_trace.rs  receipts.rs  request.rs  state.rs
ethportal-api/src/utils/: bytes.rs  mod.rs  rethtypes.rs  roots.rs
ethportal-peertest/: Cargo.toml  README.md
ethportal-peertest/src/: cli.rs  constants.rs  events.rs  jsonrpc.rs  lib.rs  main.rs  scenarios.rs  utils.rs
ethportal-peertest/src/scenarios/: basic.rs  bridge.rs  eth_rpc.rs  find.rs  gossip.rs  mod.rs  offer_accept.rs  paginate.rs  put_content.rs  state.rs  utp.rs  validation.rs
light-client/: Cargo.toml  README.md
light-client/src/: client.rs  database.rs  errors.rs  lib.rs  main.rs  node.rs  rpc.rs  utils.rs
light-client/src/config/: base.rs  (+6 more)
light-client/testdata/: updates.json
light-client/tests/: sync.rs
portal-bridge/: Cargo.toml  README.md
portal-bridge/src/: beacon_bridge.rs  bridge.rs  census.rs  cli.rs  client_handles.rs  consensus_api.rs  constants.rs  execution_api.rs  full_header.rs  gossip.rs  gossip_engine.rs  handle.rs  lib.rs  main.rs  mode.rs  pandaops.rs  put_content.rs  stats.rs  utils.rs
portal-bridge/tests/: state.rs
portalnet/: Cargo.toml  README.md
portalnet/src/: accept_queue.rs  bootnodes.rs  config.rs  constants.rs  discovery.rs  events.rs  gossip.rs  lib.rs  metrics.rs  offer_queue.rs  overlay.rs  overlay_service.rs  put_content.rs  socket.rs  storage.rs  utp_controller.rs
portalnet/tests/: overlay.rs
rpc/: Cargo.toml  README.md
rpc/src/: beacon_rpc.rs  builder.rs  config.rs  cors.rs  discv5.rs  discv5_rpc.rs  errors.rs  eth_rpc.rs  evm_state.rs  fetch.rs  history.rs  history_rpc.rs  lib.rs  rpc_server.rs  serde.rs  server.rs  server_rpc.rs  state_rpc.rs  web3.rs  web3_rpc.rs
state/: Cargo.toml
state/src/: jsonrpc.rs  main.rs
trin/: Cargo.toml
trin-beacon/: Cargo.toml  README.md
trin-beacon/src/: events.rs  jsonrpc.rs  lib.rs  network.rs  ping_extensions.rs  storage.rs  sync.rs  test_utils.rs  validation.rs
trin-bridge/: Cargo.toml  README.md
trin-bridge/src/: bridge.rs  cli.rs  constants.rs  full_header.rs  lib.rs  main.rs  mode.rs  types.rs  utils.rs
trin-cli/: Cargo.toml  README.md
trin-cli/src/: main.rs
trin-client/: Cargo.toml
trin-client/src/: lib.rs  main.rs
trin-core/: Cargo.toml  README.md
trin-core/src/: bridge.rs  cli.rs  content_key.rs  jsonrpc.rs  lib.rs  locks.rs  metrics.rs  socket.rs  utils.rs
trin-core/tests/: overlay.rs  utp_listener.rs
trin-evm/: Cargo.toml
trin-evm/src/: lib.rs  tx_env_modifier.rs
trin-execution/: Cargo.toml  Dockerfile  README.md
trin-execution/metrics/: README.md  compose.yaml
trin-execution/src/: block_reward.rs  cli.rs  config.rs  content.rs  dao_fork.rs  era_manager.rs  execution.rs  lib.rs  main.rs  metrics.rs  transaction.rs  trie_walker.rs  utils.rs
trin-execution/tests/: content_generation.rs  export_import.rs  state.rs
trin-history/: Cargo.toml
trin-history/src/: content_key.rs  events.rs  jsonrpc.rs  lib.rs  main.rs  network.rs  ping_extensions.rs  storage.rs  utils.rs  validation.rs
trin-metrics/: Cargo.toml
trin-metrics/src/: bridge.rs  labels.rs  lib.rs  overlay.rs  portalnet.rs  storage.rs  timer.rs  utils.rs
trin-state/: Cargo.toml
trin-state/src/: content_key.rs  events.rs  jsonrpc.rs  lib.rs  main.rs  network.rs  ping_extensions.rs  storage.rs  trie.rs  utils.rs  validation.rs
trin-storage/: Cargo.toml
trin-storage/src/: config.rs  error.rs  lib.rs  sql.rs  test_utils.rs  utils.rs
trin-types/: Cargo.toml  README.md
trin-types/src/: bootnodes.rs  bridge.rs  cli.rs  constants.rs  content_key.rs  content_value.rs  discv5.rs  distance.rs  enr.rs  header.rs  lib.rs  node_id.rs  provider.rs  query_trace.rs  receipts.rs  request.rs
trin-utils/: Cargo.toml  build.rs
trin-utils/src/: bucket.rs  bytes.rs  dir.rs  lib.rs  log.rs  submodules.rs  version.rs
trin-validation/: Cargo.toml
trin-validation/src/: accumulator.rs  bridge.rs  constants.rs  header_validator.rs  header_validfator.rs  historical_roots_acc.rs  lib.rs  oracle.rs  validator.rs
trin/src/: main.rs
utp-testing/: Cargo.toml  README.md
utp-testing/docker/: Dockerfile  docker-compose.yml  run_endpoint.sh  setup.sh
utp-testing/src/: cli.rs  lib.rs  main.rs  rpc.rs
(+1370 files in other folders)
