[workspace]
members = [
    "bin/portal-bridge",
    "bin/trin", 
    "bin/trin-execution",
    "crates/ethportal-api",
    "crates/e2store",
    "crates/evm",
    "crates/light-client",
    "crates/metrics",
    "crates/portalnet",
    "crates/rpc",
    "crates/storage",
    "crates/subnetworks/beacon",
    "crates/subnetworks/history",
    "crates/subnetworks/state",
    "crates/utils",
    "crates/validation",    
    "testing/ef-tests",
    "testing/ethportal-peertest",
    "testing/utp",
]

default-members = ["bin/trin"]
resolver = "2"

[workspace.package]
authors = ["https://github.com/ethereum/trin/graphs/contributors"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
keywords = ["ethereum", "portal-network"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ethereum/trin"
rust-version = "1.85.0"
version = "0.2.1"

[workspace.dependencies]
alloy = { version = "0.11.1", default-features = false, features = ["std"] }
alloy-rlp = { version = "0.3.8", default-features = false, features = ["derive"] }
anyhow = "1.0.68"
async-trait = "0.1.68"
bytes = "1.3.0"
chrono = "0.4.38"
clap = { version = "4.2.1", features = ["derive"] }
delay_map = "0.4.0"
directories = "3.0"
discv5 = { version = "0.9.1", features = ["serde"] }
env_logger = "0.9.0"
eth_trie = "0.5.0"
ethereum_hashing = "0.7.0"
ethereum_serde_utils = "0.7.0"
ethereum_ssz = "0.7.1"
ethereum_ssz_derive = "0.7.1"
futures = "0.3.23"
futures-util = "0.3.23"
hex = "0.4.3"
humanize-duration = "0.0.6"
itertools = "0.13.0"
jsonrpsee = "0.24.4"
keccak-hash = "0.10.0"
lazy_static = "1.4.0"
parking_lot = "0.11.2"
prometheus_exporter = "0.8.4"
quickcheck = "1.0.3"
r2d2 = "0.8.9"
r2d2_sqlite = "0.24.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["native-tls-vendored", "json"] }
reth-ipc = { tag = "v1.0.8", git = "https://github.com/paradigmxyz/reth.git"}
revm = { version = "14.0.3", default-features = false, features = ["std", "secp256k1", "serde-json", "c-kzg"] }
revm-primitives = { version = "10.0.0", default-features = false, features = ["std", "serde"] }
rstest = "0.18.2"
rust-embed = "8.5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
scraper = "0.18.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.33"
serde-this-or-that = "0.4.2"
serial_test = "0.5.1"
sha3 = "0.9.1"
snap = "1.1.1"
ssz_types = "0.8.0"
strum = { version = "0.26.1", features = ["derive"] }
tempfile = "3.3.0"
test-log = { version = "0.2.11", features = ["trace"] }
thiserror = "1.0.57"
tokio = { version = "1.14.0", features = ["full"] }
tokio-test = "0.4.2"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-test = "0.1"
tree_hash = "0.8.0"
tree_hash_derive = "0.8.0"
uds_windows = "1.0.1"
ureq = { version = "2.5.0", features = ["json"] }
url = "2.3.1"
utp-rs = { git = "https://github.com/ethereum/utp", tag = "v0.1.0-alpha.16" }

# Trin workspace crates
e2store = { path = "crates/e2store" }
ethportal-api = { path = "crates/ethportal-api" }
light-client = { path = "crates/light-client" }
portal-bridge = { path = "bin/portal-bridge" }
portalnet = { path = "crates/portalnet" }
rpc = { path = "crates/rpc"}
trin = { path = "bin/trin"}
trin-beacon = { path = "crates/subnetworks/beacon" }
trin-evm = { path = "crates/evm" }
trin-execution = { path = "bin/trin-execution" }
trin-history = { path = "crates/subnetworks/history" }
trin-metrics = { path = "crates/metrics" }
trin-state = { path = "crates/subnetworks/state" }
trin-storage = { path = "crates/storage" }
trin-utils = { path = "crates/utils" }
trin-validation = { path = "crates/validation" }

crunchy = "=0.2.2"

[patch.crates-io]
# TODO: remove this when our other dependencies update to getrandom 0.3 as it is a breaking change
tempfile = { git = "https://github.com/Stebalien/tempfile", tag = "v3.15.0" }
# TODO: remove this when our other dependencies update to getrandom 0.3 as it is a breaking change
uuid = { git = "https://github.com/uuid-rs/uuid", tag = "1.12.1" }

# TODO: When we build for a windows target on an ubuntu runner, crunchy tries to
# get the wrong path, update this when the workflow has been updated
#
# See: https://github.com/eira-fransham/crunchy/issues/13
crunchy = { git = "https://github.com/eira-fransham/crunchy", rev = "1bf90cf2d0a8cfcb2c5592275a23ab028dff6468" }
