[package]
name = "devp2p"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trin-core = { path = "../trin-core" }
tokio = {version = "1.8.0", features = ["full"]}
rocksdb = "0.16.0"
log = "0.4.14"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
structopt = "0.3"
clap = "2.33.3"

[dependencies.discv5]
version = "0.1.0-beta.5"
git = "https://github.com/sigp/discv5"
