[package]
name = "e2store"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/e2store"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network", "e2store", "era", "era1"]
categories = ["cryptography::cryptocurrencies"]
description = "E2store, era, and era1 implementations for Ethereum"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]


[dependencies]
alloy = { workspace = true, features = ["rlp"] }
alloy-rlp.workspace = true
anyhow.workspace = true
clap = { workspace = true, optional = true }
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
ethportal-api.workspace = true
rand.workspace = true
reqwest.workspace = true
tracing.workspace = true
trin-utils = { workspace = true, optional = true }
scraper.workspace = true
snap.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio.workspace = true
trin-utils.workspace = true

[features]
era2-stats-binary = ["clap", "trin-utils"]

[[bin]]
name = "era2-stats"
required-features = ["era2-stats-binary"]
