[package]
name = "ethportal-api"
version = "0.2.2"
edition = "2021"
description = "Definitions for various Ethereum Portal Network JSONRPC APIs"
license = "GPL-3.0"
repository = "https://github.com/ethereum/trin/tree/master/ethportal-api"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives = "0.6.4"
alloy-rlp = "0.3.4"
anyhow = "1.0.68"
base64 = "0.13.0"
bytes = "1.3.0"
clap = { version = "4.2.1", features = ["derive"] }
discv5 = { version = "0.4.1", features = ["serde"] }
eth_trie = { git = "https://github.com/kolbyml/eth-trie.rs.git", rev = "a09b2365f1457cb83bae5ebfa2cf133a9dd1657f" }
ethereum_serde_utils = { git = "https://github.com/KolbyML/ethereum_serde_utils.git", rev = "25b69f5dbd3ac871217ad24fc42304a93000d8da" }
ethereum_ssz = { git = "https://github.com/KolbyML/ethereum_ssz.git", rev = "ec9af0923e3122353243f4f6656fd6e6e3c2e4e3" }
ethereum_ssz_derive = { git = "https://github.com/KolbyML/ethereum_ssz.git", rev = "ec9af0923e3122353243f4f6656fd6e6e3c2e4e3" }
ethnum = "1.3.2"
hex = "0.4.3"
jsonrpsee = {version="0.20.0", features = ["async-client", "client", "macros", "server"]}
keccak-hash = "0.10.0"
lazy_static = "1.4.0"
nanotemplate = "0.3.0"
quickcheck = "1.0.3"
rand = "0.8.5"
reth-rpc-types = { tag = "v0.2.0-beta.4", git = "https://github.com/paradigmxyz/reth.git"}
rlp = "0.5.0"
rs_merkle = "1.4.2"
serde = { version = "1.0.150", features = ["derive", "rc"] }
serde_json = "1.0.89"
serde-this-or-that = "0.4.2"
serde_yaml = "0.9"
sha2 = "0.10.1"
sha3 = "0.9.1"
snap = "1.1.0"
superstruct = "0.7.0"
ssz_types = { git = "https://github.com/KolbyML/ssz_types.git", rev = "91db848894d6cb94e3258d1a9f9be4897d05463a" }
thiserror = "1.0.57"
tree_hash = { git = "https://github.com/KolbyML/tree_hash.git", rev = "c402373ce2b430551eb8debd85512ceac9567210" }
tree_hash_derive = { git = "https://github.com/KolbyML/tree_hash.git", rev = "c402373ce2b430551eb8debd85512ceac9567210" }
tokio = { version = "1.14.0", features = ["full"] }
ureq = { version = "2.5.0", features = ["json"] }
url = "2.3.1"
validator = { version = "0.13.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.9.0"
quickcheck = "1.0.3"
rstest = "0.18.2"
test-log = { version = "0.2.11", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
