[package]
name = "ethportal-api"
version = "0.2.2"
edition = "2021"
description = "Definitions for various Ethereum Portal Network JSONRPC APIs"
license = "GPL-3.0"
repository = "https://github.com/ethereum/trin/tree/master/ethportal-api"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives = { version = "0.7.0", features = ["ssz"] }
alloy-rlp = "0.3.4"
anyhow = "1.0.68"
base64 = "0.13.0"
bimap = "0.6.3"
bytes = "1.3.0"
clap = { version = "4.2.1", features = ["derive"] }
const_format = {version = "0.2.0", features = ["rust_1_64"]}
c-kzg = "1.0.0"
discv5 = { version = "0.4.1", features = ["serde"] }
ethereum_hashing = "0.6.0"
eth_trie = { git = "https://github.com/kolbyml/eth-trie.rs.git", rev = "7e57d3dfadee126cc9fda2696fb039bf7b6ed688" }
ethereum_serde_utils = "0.5.2"
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.3"
hex = "0.4.3"
jsonrpsee = {version="0.20.0", features = ["async-client", "client", "macros", "server"]}
keccak-hash = "0.10.0"
lazy_static = "1.4.0"
nanotemplate = "0.3.0"
once_cell = "1.17"
quickcheck = "1.0.3"
rand = "0.8.5"
reth-rpc-types = { rev = "8d1d13ef89cf19459adc37ba0c45e7aac6270dc1", git = "https://github.com/paradigmxyz/reth.git"}
rlp = "0.5.0"
rs_merkle = "1.4.2"
secp256k1 = { version = "0.29.0", features = ["global-context", "recovery", "rand"] }
serde = { version = "1.0.150", features = ["derive", "rc"] }
serde_json = "1.0.89"
serde-this-or-that = "0.4.2"
sha2 = "0.10.1"
sha3 = "0.9.1"
superstruct = "0.7.0"
ssz_types = { git = "https://github.com/KolbyML/ssz_types.git", rev = "2a5922de75f00746890bf4ea9ad663c9d5d58efe" }
thiserror = "1.0.57"
tree_hash = { git = "https://github.com/KolbyML/tree_hash.git", rev = "8aaf8bb4184148768d48e2cfbbdd0b95d1da8730" }
tree_hash_derive = { git = "https://github.com/KolbyML/tree_hash.git", rev = "8aaf8bb4184148768d48e2cfbbdd0b95d1da8730" }
trin-utils = { path = "../trin-utils" }
tokio = { version = "1.14.0", features = ["full"] }
ureq = { version = "2.5.0", features = ["json"] }
url = "2.3.1"
validator = { version = "0.13.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.9.0"
quickcheck = "1.0.3"
rstest = "0.18.2"
serde_yaml = "0.9"
snap = "1.1.0"
test-log = { version = "0.2.11", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
