[package]
name = "ethportal-api"
version = "0.2.2"
edition = "2021"
description = "Definitions for various Ethereum Portal Network JSONRPC APIs"
license = "GPL-3.0"
repository = "https://github.com/ethereum/trin/tree/master/ethportal-api"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
anyhow.workspace = true
base64 = "0.13.0"
bimap = "0.6.3"
bytes.workspace = true
c-kzg = "1.0.0"
clap.workspace = true
const_format = {version = "0.2.0", features = ["rust_1_64"]}
discv5.workspace = true
eth_trie.workspace = true
ethereum_hashing = "0.7.0"
ethereum_serde_utils = "0.7.0"
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
hex.workspace = true
jsonrpsee = { workspace = true, features = ["async-client", "client", "macros", "server"]}
keccak-hash.workspace = true
lazy_static.workspace = true
nanotemplate = "0.3.0"
once_cell = "1.17"
quickcheck.workspace = true
rand.workspace = true
rlp = "0.5.0"
rs_merkle = "1.4.2"
secp256k1 = { version = "0.29.0", features = ["global-context", "recovery", "rand"] }
serde = { workspace = true, features = ["rc"] }
serde-this-or-that.workspace = true
serde_json.workspace = true
sha2 = "0.10.1"
sha3.workspace = true
ssz_types.workspace = true
superstruct = "0.7.0"
thiserror.workspace = true
tokio.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
trin-utils.workspace = true
ureq.workspace = true
url.workspace = true
validator = { version = "0.13.0", features = ["derive"] }

[dev-dependencies]
env_logger.workspace = true
quickcheck.workspace = true
rstest.workspace = true
serde_yaml.workspace = true
snap.workspace = true
test-log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
