[package]
name = "ethportal-peertest"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/ethportal-peertest"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Testing utilities for trin"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives = { workspace = true, features = ["getrandom"] }
alloy-rlp.workspace = true
anyhow.workspace = true
discv5.workspace = true
e2store.workspace = true
ethereum_ssz.workspace = true
ethportal-api.workspace = true
futures.workspace = true
hex.workspace = true
jsonrpsee = { workspace = true, features = ["async-client", "client", "macros", "server"]}
portal-bridge.workspace = true
rand.workspace = true
reth-ipc.workspace = true
rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true
trin = { path = ".." }
trin-history.workspace = true
trin-state.workspace = true
trin-utils.workspace = true
trin-validation.workspace = true
ureq.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
uds_windows.workspace = true
