[package]
name = "light-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Beacon chain light client implementation"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.57"
chrono = "0.4.22"
ethereum-types = "0.14.1"
ethportal-api = { path = "../ethportal-api" }
figment = { version = "0.10.7", features = ["toml", "env"] }
futures = "0.3.23"
hex = "0.4.3"
jsonrpsee = { version = "0.20.0", features = ["full"] }
log = "0.4.17"
milagro_bls = { git = "https://github.com/Snowfork/milagro_bls" }
parking_lot = "0.11.2"
portalnet = { path = "../portalnet" }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9"
serde-this-or-that = "0.4.2"
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "d09f55b4f8554491e3431e01af1c32347a8781cd" }
ssz_types = "0.5.4"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tree_hash = "0.5.2"

[lib]
name = "light_client"
path = "src/lib.rs"
