[package]
name = "light-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Beacon chain light client implementation"

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
ethportal-api.workspace = true
figment = { version = "0.10.7", features = ["toml", "env"] }
futures.workspace = true
hex.workspace = true
jsonrpsee = { workspace = true, features = ["full"] }
log = "0.4.17"
milagro_bls = { package="snowbridge-milagro-bls", git = "https://github.com/Snowfork/milagro_bls" }
portalnet.workspace = true
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde-this-or-that.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "d09f55b4f8554491e3431e01af1c32347a8781cd" }
ssz_types.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true

[lib]
name = "light_client"
path = "src/lib.rs"
