[package]
name = "portal-bridge"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/portal-bridge"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Bridge node for the Portal Network"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]


[dependencies]
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500"}
alloy-primitives = "0.7.0"
alloy-rlp = "0.3.4"
anyhow = "1.0.68"
async-trait = "0.1.68"
chrono = "0.4.26"
clap = { version = "4.2.1", features = ["derive"] }
discv5 = { version = "0.4.1", features = ["serde"] }
ethereum_ssz = "0.5.3"
ethereum_ssz_derive = "0.5.3"
ethportal-api = { path = "../ethportal-api" }
eth_trie = { git = "https://github.com/kolbyml/eth-trie.rs.git", rev = "11ec003e3276e1413f06328ab746af5d99f112bb" }
futures = "0.3.21"
jsonrpsee = { version = "0.20.0", features = [
  "async-client",
  "client",
  "macros",
  "server",
] }
lazy_static = "1.4.0"
portalnet = { path = "../portalnet" }
prometheus_exporter = "0.8.4"
rand = "0.8.4"
scraper = "0.18.1"
serde = { version = "1.0.150", features = ["derive", "rc"] }
serde_json = "1.0.89"
serde_yaml = "0.9"
snap = "1.1.1"
ssz_types = { git = "https://github.com/KolbyML/ssz_types.git", rev = "2a5922de75f00746890bf4ea9ad663c9d5d58efe" }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls", "middleware-logger", "encoding"] } # we use rustls because OpenSSL cause issues compiling on aarch64
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
trin-metrics = { path = "../trin-metrics" }
trin-utils = { path = "../trin-utils" }
trin-validation = { path = "../trin-validation" }
url = "2.3.1"

[dev-dependencies]
env_logger = "0.9.0"
rstest = "0.18.2"
test-log = { version = "0.2.11", features = ["trace"] }
