[package]
name = "portal-bridge"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/portal-bridge"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Bridge node for the Portal Network"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]


[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
delay_map.workspace = true
discv5.workspace = true
e2store.workspace = true
eth_trie.workspace = true
ethereum_ssz.workspace = true
ethportal-api.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = [
  "async-client",
  "client",
  "macros",
  "server",
] }
portalnet.workspace = true
prometheus_exporter.workspace = true
rand.workspace = true
reqwest.workspace = true
reqwest-middleware = { version = "0.3.3", features = ["json"] }
reqwest-retry = "0.6.1"
revm.workspace = true
revm-primitives.workspace = true
scraper.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
serde_yaml.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tracing.workspace = true
trin-evm.workspace = true
trin-execution.workspace = true
trin-metrics.workspace = true
trin-utils.workspace = true
trin-validation.workspace = true
url.workspace = true

[dev-dependencies]
env_logger.workspace = true
rstest.workspace = true
test-log.workspace = true
tracing-test.workspace = true
