[package]
name = "portalnet"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/portalnet"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Core library for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-primitives = "0.7.0"
anyhow = "1.0.68"
async-trait = "0.1.64"
bytes = "1.3.0"
delay_map = "0.3.0"
directories = "3.0"
discv5 = { version = "0.4.1", features = ["serde"] }
ethereum_ssz = "0.5.3"
ethportal-api = { path = "../ethportal-api" }
fnv = "1.0.7"
futures = "0.3.21"
hex = "0.4.3"
igd-next = "0.14.2"
itertools = "0.12.1"
lazy_static = "1.4.0"
leb128 = "0.2.1"
local-ip-address = "0.5.6"
lru = "0.7.8"
parking_lot = "0.11.2"
rand = "0.8.4"
serde = { version = "1.0.150", features = ["derive"] }
smallvec = "1.8.0"
ssz_types = { git = "https://github.com/KolbyML/ssz_types.git", rev = "2a5922de75f00746890bf4ea9ad663c9d5d58efe" }
stunclient = "0.4.1"
tempfile = "3.3.0"
thiserror = "1.0.57"
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.36"
trin-metrics = { path = "../trin-metrics" }
trin-storage = { path = "../trin-storage" }
trin-utils = { path = "../trin-utils" }
trin-validation = { path = "../trin-validation" }
utp-rs = { git = "https://github.com/ethereum/utp", tag = "v0.1.0-alpha.12" }

[target.'cfg(windows)'.dependencies]
uds_windows = "1.0.1"

[dev-dependencies]
env_logger = "0.9.0"
quickcheck = "1.0.3"
rstest = "0.18.2"
serial_test = "0.5.1"
test-log = { version = "0.2.11", features = ["trace"] }
tokio-test = "0.4.2"
tracing-subscriber = "0.3.15"
